# GeneratorCalc_v2

./: .env.example  .gitignore  0001-ARCHITECTURE.patch  0002-RULES.patch  0003-CLAUDE.patch  0004-PRD.patch  0005-docker-compose.patch  0006-nginx-sse-conf.patch  0007-eslint-rule.patch  0008-env-example.patch  ARCHITECTURE.md  ApplyAllFixes.ps1  CHANGES.md  CLAUDE.md  CLAUDE.md.bak.20250927-204542  CLAUDE_IMPROVEMENTS.md  CODEBASE_ANALYSIS_SUMMARY.md  CONFIGURATION_GUIDE.md  DASHBOARD_DATA_FLOW.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  MICROSERVICES_SETUP.md  MIGRATION_TO_DOTNET.md  PHASE2_DTOS_REPOSITORIES_COMPLETE.md  PHASE2_SLSQP_INTEGRATION_COMPLETE.md  PRD.md  PRD.md.bak.20250927-204542  PRODUCTION_QUICK_START.md  PRODUCTION_READINESS_REPORT.md  PROJECT_STATUS_REPORT.md  RATE_LIMITING_IMPLEMENTATION.md  RATE_LIMITING_SUMMARY.md  README.md  README_DEPLOYMENT.txt  RULES.md  SYSTEM_VERIFICATION_REPORT.md  TEST_PLAN.md  USER_GUIDE.md  (+10 more)
backend/: .coverage  .dockerignore  BCRYPT_FIX_INSTRUCTIONS.md  CLAUDE_IMPROVEMENTS.md  Dockerfile.dev  Dockerfile.simple  TEST_COVERAGE_ANALYSIS.md  alembic.ini  celerybeat-schedule  coverage.json  create_admin.py  create_db.py  init_materials.py  pyproject.toml  requirements.txt  test.db  test_auth_debug.py
backend/app/: celery.py  main.py
backend/app/api/: dependencies.py  deps.py
backend/app/core/: config.py  database.py  exceptions.py  logging.py  metrics.py  security.py
backend/app/models/: __init__.py  import_job.py  optimization.py  regenerator.py  reporting.py  user.py
backend/app/repositories/: base.py  user_repository.py
backend/app/schemas/: auth_schemas.py  import_schemas.py  optimization_schemas.py  (+2 more)
backend/migrations/: env.py
backend/reports/: report_adac4621-96d9-4a99-873d-cb35334b52ad_20250928_185022.xlsx
backend/tests/: __init__.py  conftest.py  test_auth_api.py  test_auth_service.py  test_auth_service_extended.py  test_core_config.py  test_core_exceptions.py  test_core_security.py  test_import_api.py  test_import_service.py  test_import_service_extended.py  test_materials_service.py  test_models.py  test_optimization_service.py  test_password_normalization.py  test_regenerator_service.py  test_reporting_service.py  test_reporting_service_extended.py  test_simple.py  test_unit_conversion.py.disabled  test_validation_error_handler.py  test_validation_service.py.disabled
(+258 files in other folders)
